Adicionando lista de lições

--- a/index.html
+++ b/index.html
@@ -10,10 +10,42 @@
 </head>
 
 <body>
-    <header id="cabeçalho">
+    <header id="cabecalho">
         <h1 id="titulo">LIÇÕES APRENDIDAS</h1>
     </header>
-    
+    <section>
+        <img src="./IMG-20220424-WA0006.jpg" alt="Minha foto" id="minha_foto" width="200px">
+    </section>
+    <section>
+        <article>
+            <ol id="licoes_aprendidas">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>   
+            </ol>
+        </article>
+        <article>
+            <ul id="licoes_a_aprender">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </article>
+    </section>
 </body>
 
 </html>
