--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
     <section>
         <article>
             <ol id="licoes_aprendidas">
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>   
+                <li>Unix</li>
+                <li>Bash</li>
+                <li>Terminal</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>Fundamentos da Internet</li>
+                <li>HTML</li>
+                <li>HTML Semântico</li>
+                <li>CSS</li>
+                <li>PDI</li>   
             </ol>
         </article>
         <article>
