Preenchendo lições a aprender

--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
         </article>
         <article>
             <ul id="licoes_a_aprender">
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>FlexBox</li>
+                <li>JavaScript</li>
+                <li>DOM</li>
+                <li>Web Storage</li>
+                <li>Testes Unitários</li>
+                <li>Lógica de Programação</li>
+                <li>Eventos</li>
+                <li>JavaScript ES6</li>
+                <li>Higher Order Functions do JavaScript ES6</li>
+                <li>React</li>
             </ul>
         </article>
     </section>
