--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li>HTML</li>
                 <li>HTML Semântico</li>
                 <li>CSS</li>
-                <li>PDI</li>   
+                <li>PDI</li>
             </ol>
         </article>
         <article>
@@ -46,6 +46,26 @@
             </ul>
         </article>
     </section>
+    <footer id="rodape">
+        <section>
+            <p>Siga-me nas Redes Sociais!!</p>
+        </section>
+        <section>
+            <a href="" target="_blank">
+                <img src="" alt="">
+            </a>
+        </section>
+        <section>
+            <a href="" target="_blank">
+                <img src="" alt="">
+            </a>
+        </section>
+        <section>
+            <a href="" target="_blank">
+                <img src="" alt="">
+            </a>
+        </section>
+    </footer>
 </body>
 
 </html>
