Adicionando links de redes sociais

--- a/index.html
+++ b/index.html
@@ -46,23 +46,33 @@
             </ul>
         </article>
     </section>
+    <main>
+        <article>
+            <p>
+
+            </p>
+        </article>
+    </main>
     <footer id="rodape">
         <section>
             <p>Siga-me nas Redes Sociais!!</p>
         </section>
         <section>
-            <a href="" target="_blank">
-                <img src="" alt="">
+            <a href="https://www.linkedin.com/in/jorge-reis-4206a4244/" target="_blank">
+                <img src="" 
+                alt="linkedin" width="50px">
             </a>
         </section>
         <section>
-            <a href="" target="_blank">
-                <img src="" alt="">
+            <a href="https://github.com/Cozmu" target="_blank">
+                <img src="" 
+                alt="GitHub" width="50px">
             </a>
         </section>
         <section>
-            <a href="" target="_blank">
-                <img src="" alt="">
+            <a href="https://www.instagram.com/_jorgiiii/" target="_blank">
+                <img src="" 
+                alt="Instagram" width="50px">
             </a>
         </section>
     </footer>
