--- a/index.html
+++ b/index.html
@@ -13,9 +13,16 @@
     <header id="cabecalho">
         <h1 id="titulo">LIÇÕES APRENDIDAS</h1>
     </header>
-    <section>
-        <img src="./IMG-20220424-WA0006.jpg" alt="Minha foto" id="minha_foto" width="200px">
-    </section>
+    <main>
+        <section>
+            <img src="./IMG-20220424-WA0006.jpg" alt="Minha foto" id="minha_foto" width="200px">
+        </section>
+        <aside>
+            Oi, me chamo Jorge Wellington, sou natural de Santarém/PA, sou estudante de desenvolvimento
+            Web na Trybe, e esse é meu primeiro Projeto. Gosto muito de jogar online com meus amigos e
+            meus estilos de jogo favorito são RPG e Hack Slash.
+        </aside>
+    </main>
     <section>
         <article>
             <ol id="licoes_aprendidas">
@@ -46,33 +53,23 @@
             </ul>
         </article>
     </section>
-    <main>
-        <article>
-            <p>
-
-            </p>
-        </article>
-    </main>
     <footer id="rodape">
         <section>
             <p>Siga-me nas Redes Sociais!!</p>
         </section>
         <section>
             <a href="https://www.linkedin.com/in/jorge-reis-4206a4244/" target="_blank">
-                <img src="" 
-                alt="linkedin" width="50px">
+                <img src="" alt="linkedin" width="50px">
             </a>
         </section>
         <section>
             <a href="https://github.com/Cozmu" target="_blank">
-                <img src="" 
-                alt="GitHub" width="50px">
+                <img src="" alt="GitHub" width="50px">
             </a>
         </section>
         <section>
             <a href="https://www.instagram.com/_jorgiiii/" target="_blank">
-                <img src="" 
-                alt="Instagram" width="50px">
+                <img src="" alt="Instagram" width="50px">
             </a>
         </section>
     </footer>
