--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     </main>
     <section>
         <article>
+            <h1>Meus Aprendizados na Trybe!!</h1>
+        </article>
+        <article>
             <ol id="licoes_aprendidas">
                 <li>Unix</li>
                 <li>Bash</li>
@@ -53,6 +56,7 @@
             </ul>
         </article>
     </section>
+    
     <footer id="rodape">
         <section>
             <p>Siga-me nas Redes Sociais!!</p>
