--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
             </ul>
         </article>
     </section>
-    
+    <article>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi iusto culpa accusamus possimus recusandae neque corrupti, repudiandae aspernatur, ullam eaque quidem! Tempore maxime mollitia quidem neque similique tenetur saepe possimus!
+    </article>
     <footer id="rodape">
         <section>
             <p>Siga-me nas Redes Sociais!!</p>
