Preenchendo mais o article

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     </section>
     <article>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi iusto culpa accusamus possimus recusandae neque corrupti, repudiandae aspernatur, ullam eaque quidem! Tempore maxime mollitia quidem neque similique tenetur saepe possimus!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit numquam debitis tempora adipisci itaque, placeat aperiam, sunt vitae magni quasi voluptas. Placeat maxime quisquam exercitationem mollitia nesciunt veniam nulla natus.
     </article>
     <footer id="rodape">
         <section>
