Finalizando requisitos obrigatorios

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         </aside>
     </main>
     <section>
-        <article>
+        <div>
             <h1>Meus Aprendizados na Trybe!!</h1>
-        </article>
-        <article>
+        </div>
+        <div>
             <ol id="licoes_aprendidas">
                 <li>Unix</li>
                 <li>Bash</li>
@@ -40,8 +40,8 @@
                 <li>CSS</li>
                 <li>PDI</li>
             </ol>
-        </article>
-        <article>
+        </div>
+        <div>
             <ul id="licoes_a_aprender">
                 <li>FlexBox</li>
                 <li>JavaScript</li>
@@ -54,11 +54,11 @@
                 <li>Higher Order Functions do JavaScript ES6</li>
                 <li>React</li>
             </ul>
-        </article>
+        </div>
     </section>
     <article>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi iusto culpa accusamus possimus recusandae neque corrupti, repudiandae aspernatur, ullam eaque quidem! Tempore maxime mollitia quidem neque similique tenetur saepe possimus!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit numquam debitis tempora adipisci itaque, placeat aperiam, sunt vitae magni quasi voluptas. Placeat maxime quisquam exercitationem mollitia nesciunt veniam nulla natus.
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi iusto culpa accusamus possimus recusandae neque corrupti, repudiandae aspernatur, ullam eaque quidem! Tempore maxime mollitia quidem neque similique tenetur saepe possimus! <br>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit numquam debitis tempora adipisci itaque, placeat aperiam, sunt vitae magni quasi voluptas. Placeat maxime quisquam exercitationem mollitia nesciunt veniam nulla natus. <br>
     </article>
     <footer id="rodape">
         <section>
