--- a/index.html
+++ b/index.html
@@ -2,84 +2,88 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <header id="cabecalho">
-        <h1 id="titulo">LIÇÕES APRENDIDAS</h1>
-    </header>
-    <main>
-        <section>
-            <img src="./IMG-20220424-WA0006.jpg" alt="Minha foto" id="minha_foto" width="200px">
-        </section>
-        <aside>
-            Oi, me chamo Jorge Wellington, sou natural de Santarém/PA, sou estudante de desenvolvimento
-            Web na Trybe, e esse é meu primeiro Projeto. Gosto muito de jogar online com meus amigos e
-            meus estilos de jogo favorito são RPG e Hack Slash.
-        </aside>
-    </main>
+  <header id="cabecalho">
+    <h1 id="titulo">LIÇÕES APRENDIDAS</h1>
+  </header>
+  <main>
     <section>
-        <div>
-            <h1>Meus Aprendizados na Trybe!!</h1>
-        </div>
-        <div>
-            <ol id="licoes_aprendidas">
-                <li>Unix</li>
-                <li>Bash</li>
-                <li>Terminal</li>
-                <li>Git</li>
-                <li>GitHub</li>
-                <li>Fundamentos da Internet</li>
-                <li>HTML</li>
-                <li>HTML Semântico</li>
-                <li>CSS</li>
-                <li>PDI</li>
-            </ol>
-        </div>
-        <div>
-            <ul id="licoes_a_aprender">
-                <li>FlexBox</li>
-                <li>JavaScript</li>
-                <li>DOM</li>
-                <li>Web Storage</li>
-                <li>Testes Unitários</li>
-                <li>Lógica de Programação</li>
-                <li>Eventos</li>
-                <li>JavaScript ES6</li>
-                <li>Higher Order Functions do JavaScript ES6</li>
-                <li>React</li>
-            </ul>
-        </div>
+      <img src="./IMG-20220424-WA0006.jpg" alt="Minha foto" id="minha_foto" width="200px">
     </section>
-    <article>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi iusto culpa accusamus possimus recusandae neque corrupti, repudiandae aspernatur, ullam eaque quidem! Tempore maxime mollitia quidem neque similique tenetur saepe possimus! <br>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit numquam debitis tempora adipisci itaque, placeat aperiam, sunt vitae magni quasi voluptas. Placeat maxime quisquam exercitationem mollitia nesciunt veniam nulla natus. <br>
-    </article>
-    <footer id="rodape">
-        <section>
-            <p>Siga-me nas Redes Sociais!!</p>
-        </section>
-        <section>
-            <a href="https://www.linkedin.com/in/jorge-reis-4206a4244/" target="_blank">
-                <img src="" alt="linkedin" width="50px">
-            </a>
-        </section>
-        <section>
-            <a href="https://github.com/Cozmu" target="_blank">
-                <img src="" alt="GitHub" width="50px">
-            </a>
-        </section>
-        <section>
-            <a href="https://www.instagram.com/_jorgiiii/" target="_blank">
-                <img src="" alt="Instagram" width="50px">
-            </a>
-        </section>
-    </footer>
+    <aside>
+      Oi, me chamo Jorge Wellington, sou natural de Santarém/PA, sou estudante de desenvolvimento
+      Web na Trybe, e esse é meu primeiro Projeto. Gosto muito de jogar online com meus amigos e
+      meus estilos de jogo favorito são RPG e Hack Slash.
+    </aside>
+  </main>
+  <section>
+    <div>
+      <h1>Meus Aprendizados na Trybe!!</h1>
+    </div>
+    <div>
+      <ol id="licoes_aprendidas">
+        <li>Unix</li>
+        <li>Bash</li>
+        <li>Terminal</li>
+        <li>Git</li>
+        <li>GitHub</li>
+        <li>Fundamentos da Internet</li>
+        <li>HTML</li>
+        <li>HTML Semântico</li>
+        <li>CSS</li>
+        <li>PDI</li>
+      </ol>
+    </div>
+    <div>
+      <ul id="licoes_a_aprender">
+        <li>FlexBox</li>
+        <li>JavaScript</li>
+        <li>DOM</li>
+        <li>Web Storage</li>
+        <li>Testes Unitários</li>
+        <li>Lógica de Programação</li>
+        <li>Eventos</li>
+        <li>JavaScript ES6</li>
+        <li>Higher Order Functions do JavaScript ES6</li>
+        <li>React</li>
+      </ul>
+    </div>
+  </section>
+  <article>
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi iusto culpa accusamus possimus recusandae neque
+    corrupti, repudiandae aspernatur, ullam eaque quidem! Tempore maxime mollitia quidem neque similique tenetur
+    saepe possimus! <br>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit numquam debitis tempora adipisci itaque, placeat
+    aperiam, sunt vitae magni quasi voluptas. Placeat maxime quisquam exercitationem mollitia nesciunt veniam nulla
+    natus. <br>
+  </article>
+  <footer id="rodape">
+    <section>
+      <p>Siga-me nas Redes Sociais!!</p>
+    </section>
+    <section>
+      <a href="https://www.linkedin.com/in/jorge-reis-4206a4244/" target="_blank">
+        <img src="" alt="linkedin" width="50px">
+      </a>
+    </section>
+    <section>
+      <a href="https://github.com/Cozmu" target="_blank">
+        <img src="" alt="GitHub" width="50px">
+      </a>
+    </section>
+    <section>
+      <a href="https://www.instagram.com/_jorgiiii/" target="_blank">
+        <img src="" alt="Instagram" width="50px">
+      </a>
+    </section>
+  </footer>
 </body>
 
 </html>
