Formatando todo o corpo

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <h1 id="titulo">LIÇÕES APRENDIDAS</h1>
   </header>
   <main id="tudo">
-    <div>
-      <section>
-        <img src="./IMG-20220424-WA0006.jpg" alt="Minha foto" id="minha_foto" width="200px">
+    <div id="primeiro-bloco">
+      <section id="imagem">
+        <img src="./IMG-20220424-WA0006.jpg" alt="Minha foto" id="minha-foto" width="200px">
       </section>
-      <aside>
+      <aside id="sobre-mim">
         Oi, me chamo Jorge Wellington, sou natural de Santarém/PA, <br> sou estudante de desenvolvimento
         Web na Trybe, e esse é <br> meu primeiro Projeto. Gosto muito de jogar online com meus <br> amigos e
         meus estilos de jogo favorito são RPG e Hack Slash.
