Mais uma tentativa de formatação

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       <section id="imagem">
         <img src="./IMG-20220424-WA0006.jpg" alt="Minha foto" id="minha-foto" width="200px">
       </section>
+      <section id="nome">
+        <h1>Jorge <br> Wellington</h1>
+      </section>
       <aside id="sobre-mim">
         Oi, me chamo Jorge Wellington, sou natural de Santarém/PA, <br> sou estudante de desenvolvimento
         Web na Trybe, e esse é <br> meu primeiro Projeto. Gosto muito de jogar online com meus <br> amigos e
