Testando limite da pagina

--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit numquam debitis tempora adipisci itaque, placeat
       aperiam, sunt vitae magni quasi voluptas. Placeat maxime quisquam exercitationem mollitia nesciunt veniam nulla
       natus. <br>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus rerum harum inventore impedit, deserunt,
+      odio dicta similique alias, omnis excepturi tempore eum assumenda labore cum perferendis. Ullam illo doloribus
+      unde? <br>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, consequatur minima? Perspiciatis in impedit
+      quis! Eum nemo, reprehenderit cupiditate dicta vel voluptatem voluptates doloremque corporis debitis eius cumque
+      fugiat voluptate?
     </article>
   </main>
   <footer id="rodape">
