--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <main id="tudo">
     <div id="primeiro-bloco">
       <section id="imagem">
-        <img src="./IMG-20220424-WA0006.jpg" alt="Minha foto" id="minha-foto" width="200px">
+        <img src="./IMG-20220424-WA0006.jpg" alt="Minha foto" id="minha_foto" width="200px">
       </section>
       <aside id="sobre-mim">
         <h1>Jorge <br> Wellington</h1>
@@ -64,13 +64,7 @@
       saepe possimus! <br>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit numquam debitis tempora adipisci itaque, placeat
       aperiam, sunt vitae magni quasi voluptas. Placeat maxime quisquam exercitationem mollitia nesciunt veniam nulla
-      natus. <br>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus rerum harum inventore impedit, deserunt,
-      odio dicta similique alias, omnis excepturi tempore eum assumenda labore cum perferendis. Ullam illo doloribus
-      unde? <br>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, consequatur minima? Perspiciatis in impedit
-      quis! Eum nemo, reprehenderit cupiditate dicta vel voluptatem voluptates doloremque corporis debitis eius cumque
-      fugiat voluptate?
+      natus.
     </article>
   </main>
   <footer id="rodape">
