Colocando as listas uma do lado da outra

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -25,11 +28,9 @@
         meus estilos de jogo favorito são RPG e Hack Slash.
       </aside>
     </div>
-    <section>
-      <div>
+    <section id="listas">
+      <div id="aprendi">
         <h2>Meus Aprendizados na Trybe!!</h2>
-      </div>
-      <div>
         <ol id="licoes_aprendidas">
           <li>Unix</li>
           <li>Bash</li>
@@ -43,7 +44,8 @@
           <li>PDI</li>
         </ol>
       </div>
-      <div>
+      <div id="nao-aprendi">
+        <h2>Aprendizados ainda a adquirir!!</h2>
         <ul id="licoes_a_aprender">
           <li>FlexBox</li>
           <li>JavaScript</li>
