Adicionando classes lado direito e esquerdo

--- a/index.html
+++ b/index.html
@@ -60,14 +60,18 @@
         </ul>
       </div>
     </section>
-    <article>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi iusto culpa accusamus possimus recusandae neque
-      corrupti, repudiandae aspernatur, ullam eaque quidem! Tempore maxime mollitia quidem neque similique tenetur
-      saepe possimus! <br>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit numquam debitis tempora adipisci itaque, placeat
-      aperiam, sunt vitae magni quasi voluptas. Placeat maxime quisquam exercitationem mollitia nesciunt veniam nulla
-      natus.
-    </article>
+    <div>
+      <article class="lado-esquerdo">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi iusto culpa accusamus possimus recusandae neque
+        corrupti, repudiandae aspernatur, ullam eaque quidem! Tempore maxime mollitia quidem neque similique tenetur
+        saepe possimus!
+      </article>
+      <aside class="lado-direito">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit numquam debitis tempora adipisci itaque, placeat
+        aperiam, sunt vitae magni quasi voluptas. Placeat maxime quisquam exercitationem mollitia nesciunt veniam nulla
+        natus.
+      </aside>
+    </div>
   </main>
   <footer id="rodape">
     <section class="siga-me">
