Formatando article e aside

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
     </section>
     <div>
       <article class="lado-esquerdo">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi iusto culpa accusamus possimus recusandae neque
-        corrupti, repudiandae aspernatur, ullam eaque quidem! Tempore maxime mollitia quidem neque similique tenetur
-        saepe possimus!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit numquam debitis tempora adipisci itaque, placeat
+        aperiam, sunt vitae magni quasi voluptas. Placeat maxime quisquam exercitationem mollitia nesciunt veniam nulla
+        natus.
       </article>
       <aside class="lado-direito">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit numquam debitis tempora adipisci itaque, placeat
@@ -72,6 +72,17 @@
         natus.
       </aside>
     </div>
+    <section class="segurador">
+      <article>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio impedit magni ex tempore voluptas rem
+        tenetur deserunt, harum sit mollitia ipsa, assumenda unde quae hic. Culpa voluptates voluptatibus ab modi.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, eius iste cupiditate eaque commodi voluptas nam
+        eos consequatur vero vitae esse, velit corporis quidem, aperiam praesentium hic quia. Dolorum, mollitia!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maiores neque beatae. Ab a ducimus tempore!
+        Minus necessitatibus omnis possimus! Non doloremque rerum itaque quos corrupti provident. Nulla, accusantium
+        beatae.
+      </article>
+    </section>
   </main>
   <footer id="rodape">
     <section class="siga-me">
