--- a/index.html
+++ b/index.html
@@ -61,13 +61,16 @@
       </div>
     </section>
     <div>
+      <div class="conteudo">
+        <h1>Conteúdo</h1>
+      </div>
       <article class="lado-esquerdo">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit numquam debitis tempora adipisci itaque, placeat
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit numquam debites tempora adipisci itaque, placeat
         aperiam, sunt vitae magni quasi voluptas. Placeat maxime quisquam exercitationem mollitia nesciunt veniam nulla
         natus.
       </article>
       <aside class="lado-direito">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit numquam debitis tempora adipisci itaque, placeat
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit numquam debites tempora adipisci itaque, placeat
         aperiam, sunt vitae magni quasi voluptas. Placeat maxime quisquam exercitationem mollitia nesciunt veniam nulla
         natus.
       </aside>
@@ -83,7 +86,61 @@
         beatae.
       </article>
     </section>
-    
+    <section id="sessao-tabela">
+      <h1>Minha Tabela de Conteúdo</h1>
+      <table id="tabela">
+        <tr>
+          <th>Conteúdo</th>
+          <th>Conteúdo</th>
+          <th>Conteúdo</th>
+          <th>Conteúdo</th>
+          <th>Conteúdo</th>
+          <th>Conteúdo</th>
+          <th>Conteúdo</th> 
+          <th>Conteúdo</th>
+        </tr>
+        <tr>
+          <td>ABC</td>
+          <td>ABC</td>
+          <td>ABC</td>
+          <td>ABC</td>
+          <td>ABC</td>
+          <td>ABC</td>
+          <td>ABC</td>
+          <td>ABC</td>
+        </tr>
+        <tr>
+          <td>ABC</td>
+          <td>ABC</td>
+          <td>ABC</td>
+          <td>ABC</td>
+          <td>ABC</td>
+          <td>ABC</td>
+          <td>ABC</td>
+          <td>ABC</td>
+        </tr>
+        <tr>
+          <td>ABC</td>
+          <td>ABC</td>
+          <td>ABC</td>
+          <td>ABC</td>
+          <td>ABC</td>
+          <td>ABC</td>
+          <td>ABC</td>
+          <td>ABC</td>
+        </tr>
+        <tr>
+          <td>ABC</td>
+          <td>ABC</td>
+          <td>ABC</td>
+          <td>ABC</td>
+          <td>ABC</td>
+          <td>ABC</td>
+          <td>ABC</td>
+          <td>ABC</td>
+        </tr>
+      </table>
+    </section>
   </main>
   <footer id="rodape">
     <section class="siga-me">
