--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>PROJETO I | FUNDAMENTOS</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,12 +21,12 @@
       <section id="imagem">
         <img src="./IMG-20220424-WA0006.jpg" alt="Minha foto" id="minha_foto" width="200px">
       </section>
-      <aside id="sobre-mim">
+      <div id="sobre-mim">
         <h1>Jorge <br> Wellington</h1>
         Oi, me chamo Jorge Wellington, sou natural de Santarém/PA, <br> sou estudante de desenvolvimento
         Web na Trybe, e esse é <br> meu primeiro Projeto. Gosto muito de jogar online com meus <br> amigos e
         meus estilos de jogo favorito são RPG e Hack Slash.
-      </aside>
+      </div>
     </div>
     <section id="listas">
       <div id="aprendi">
@@ -67,16 +67,16 @@
       <article class="lado-esquerdo">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit numquam debites tempora adipisci itaque, placeat
         aperiam, sunt vitae magni quasi voluptas. Placeat maxime quisquam exercitationem mollitia nesciunt veniam nulla
-        natus.
+        natus. Lorem ipsum dolor sit amet consectetur adipisicing elit.
       </article>
       <aside class="lado-direito">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit numquam debites tempora adipisci itaque, placeat
         aperiam, sunt vitae magni quasi voluptas. Placeat maxime quisquam exercitationem mollitia nesciunt veniam nulla
-        natus.
+        natus. 
       </aside>
     </div>
     <section class="segurador">
-      <article>
+      <div>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio impedit magni ex tempore voluptas rem
         tenetur deserunt, harum sit mollitia ipsa, assumenda unde quae hic. Culpa voluptates voluptatibus ab modi.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, eius iste cupiditate eaque commodi voluptas nam
@@ -84,7 +84,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maiores neque beatae. Ab a ducimus tempore!
         Minus necessitatibus omnis possimus! Non doloremque rerum itaque quos corrupti provident. Nulla, accusantium
         beatae.
-      </article>
+      </div>
     </section>
     <section id="sessao-tabela">
       <h1>Minha Tabela de Conteúdo</h1>
