--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h1>Jorge <br> Wellington</h1>
         Oi, me chamo Jorge Wellington, sou natural de Santarém/PA, <br> sou estudante de desenvolvimento
         Web na Trybe, e esse é <br> meu primeiro Projeto. Gosto muito de jogar online com meus <br> amigos e
-        meus estilos de jogo favorito são RPG e Hack Slash.
+        meus estilos de jogos favoritos são RPG e Hack Slash.
       </div>
     </div>
     <section id="listas">
