refactore: refatorando html css

--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
       </section>
       <div id="sobre-mim">
         <h1>Jorge <br> Wellington</h1>
-        Oi, me chamo Jorge Wellington, sou natural de Santarém/PA, <br> sou estudante de desenvolvimento
-        Web na Trybe, e esse é <br> meu primeiro Projeto. Gosto muito de jogar online com meus <br> amigos e
-        meus estilos de jogos favoritos são RPG e Hack Slash.
+        <p>
+          Oi, me chamo Jorge Wellington, sou natural de Santarém/PA, <br> sou estudante de desenvolvimento
+          Web na Trybe, e esse é <br> meu primeiro Projeto. Gosto muito de jogar online com meus <br> amigos e
+          meus estilos de jogos favoritos são RPG e Hack Slash.
+        </p>
+          
       </div>
     </div>
     <section id="listas">
@@ -60,10 +63,8 @@
         </ul>
       </div>
     </section>
-    <div>
-      <div class="conteudo">
-        <h1>Conteúdo</h1>
-      </div>
+    <div class="conteudo">
+      <h1 class="coteudo-title">Conteúdo</h1>
       <article class="lado-esquerdo">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit numquam debites tempora adipisci itaque, placeat
         aperiam, sunt vitae magni quasi voluptas. Placeat maxime quisquam exercitationem mollitia nesciunt veniam nulla
@@ -74,18 +75,18 @@
         aperiam, sunt vitae magni quasi voluptas. Placeat maxime quisquam exercitationem mollitia nesciunt veniam nulla
         natus. 
       </aside>
+      <section class="segurador">
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio impedit magni ex tempore voluptas rem
+          tenetur deserunt, harum sit mollitia ipsa, assumenda unde quae hic. Culpa voluptates voluptatibus ab modi.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, eius iste cupiditate eaque commodi voluptas nam
+          eos consequatur vero vitae esse, velit corporis quidem, aperiam praesentium hic quia. Dolorum, mollitia!
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maiores neque beatae. Ab a ducimus tempore!
+          Minus necessitatibus omnis possimus! Non doloremque rerum itaque quos corrupti provident. Nulla, accusantium
+          beatae. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Menssagem subliminar. Nao olhe aqui.
+        </p>
+      </section>
     </div>
-    <section class="segurador">
-      <div>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio impedit magni ex tempore voluptas rem
-        tenetur deserunt, harum sit mollitia ipsa, assumenda unde quae hic. Culpa voluptates voluptatibus ab modi.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, eius iste cupiditate eaque commodi voluptas nam
-        eos consequatur vero vitae esse, velit corporis quidem, aperiam praesentium hic quia. Dolorum, mollitia!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates maiores neque beatae. Ab a ducimus tempore!
-        Minus necessitatibus omnis possimus! Non doloremque rerum itaque quos corrupti provident. Nulla, accusantium
-        beatae. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Menssagem subliminar. Nao olhe aqui.
-      </div>
-    </section>
     <section id="sessao-tabela">
       <h1>Minha Tabela de Conteúdo</h1>
       <table id="tabela">
